# OQS

./: .gitignore  .travis.yml  CMakeLists.txt  OqsConfig.h.in  README.md
examples/: CMakeLists.txt  RabiOscillations.c
include/: CMakeLists.txt  Oqs.h  OqsAmplitude.h  OqsErrors.h  OqsJumpTrajectory.h  OqsMbo.h
src/: CMakeLists.txt  Integrator.c  Integrator.h  OqsJumpTrajectory.c  OqsMbo.c
tests/: CMakeLists.txt  test_Integrator.cpp  test_OqsJumpTrajectory.cpp  test_OqsMbo.cpp
utilities/: download_mbo.sh
